--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button>Sign up</button>
             </div>
             <div class="column-2">
-                <img src="/images/benz-1.jpg" alt="">
+                <img src="images/benz-1.jpg" alt="">
             </div>
         </div>
     </div>
@@ -35,25 +35,25 @@
         <div class="box-container">
             <div class="box">
                 <a href="https://www.mercedes-amg.com/en/vehicles/gt/4-door-coupe.html">
-                    <img src="/images/benz-2.avif" alt="">
+                    <img src="images/benz-2.avif" alt="">
                     <p>Mercedes-AMG GT 63 S</p>
                 </a>
             </div>
             <div class="box">
                 <a href="https://www.autoevolution.com/cars/mercedes-benz-slr-stirling-moss-2009.html#aeng_mercedes-benz-slr-striling-moss-2009-54-v8-kompressor">
-                    <img src="/images/benz-3.jpg" alt="">
+                    <img src="images/benz-3.jpg" alt="">
                     <p>Mercedes-Benz SLR McLaren Stirling Moss</p>
                 </a>
             </div>
             <div class="box">
                 <a href="https://www.carwale.com/mercedes-benz-cars/amg-gt-4-door-coupe/63-s-4matic-plus/">
-                    <img src="/images/benz-4.avif" alt="">
+                    <img src="images/benz-4.avif" alt="">
                     <p>Mercedes-AMG GT 63 S</p>
                 </a>
             </div>
             <div class="box">
                 <a href="https://www.carwale.com/mercedes-benz-cars/eqc/">
-                    <img src="/images/benz-5.avif" alt="">
+                    <img src="images/benz-5.avif" alt="">
                     <p>Mercedes-Benz EQC</p>
                 </a>
             </div>
